[package]
name = "trustrl"
version = "0.1.0"
edition = "2021"
authors = ["Matias Fontanini"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
runtime-format = "0.1.2"
regex = "^1.7"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1"
url = "2.3.1"

[dev-dependencies]
rstest = { version = "0.17.0", default-features = false }
